--- a/gugudan.html
+++ b/gugudan.html
@@ -47,7 +47,7 @@
                   value: "",
                 };
               });
-              this.potato.focus(); // === document.querySelector(input).focus();
+              this.input.focus(); // === document.querySelector(input).focus();
             } else {
               this.setState({
                 result: `${value} 땡!`,
@@ -55,12 +55,17 @@
                 second: second,
                 value: "",
               });
-              this.potato.focus(); // === document.querySelector(input).focus();
+              this.input.focus(); // === document.querySelector(input).focus();
             }
           };
 
-          potato;
-          //class에 potato선언, input 태그에 ref={(c) => (this.potato = c)} , onSubmit에 this.potato.focus(); // === document.querySelector(input).focus();
+          input;
+          //class에 potato선언, input 태그에 ref={(c) => (this.input = c)} , onSubmit에 this.input.focus(); // === document.querySelector(input).focus();
+
+          onRefInput = (c) => {
+            this.input = c;
+            console.log(c); // <input type="number" value="" /> 즉 자기 자신 태그 출력
+          };
 
           render() {
             const { first, second, value, result } = this.state;
@@ -72,11 +77,10 @@
                 </div>
                 <form onSubmit={this.onSubmit}>
                   <input
-                    ref={(c) => {
+                    ref={
+                      this.onRefInput
                       //값을 입력할때마다 input.focus()를 넣고 싶을때
-                      console.log(c); // <input type="number" value="" /> 즉 자기 자신 태그 출력
-                      this.potato = c;
-                    }}
+                    }
                     type="number"
                     value={value}
                     onChange={this.onChange}
