--- a/Gugudan/hooksGugudan.html
+++ b/Gugudan/hooksGugudan.html
@@ -36,6 +36,7 @@
         const onSubmit = (e) => {
           e.preventDefault();
           if (parseInt(value) === first * second) {
+            //hooks의 setState는 setState를 하나하나 렌더링하지 않고 모아서 한번에 처리한다.
             setResult((prevResult) => {
               //매개변수 prevResult는 전단계의 Result
               return `정답 : ${value}`;
@@ -52,7 +53,7 @@
             inputRef.current.focus();
           }
         };
-
+        cosole.log("렌더링");
         const onChange = (e) => {
           setValue(e.target.value);
         };
